<resources>
    <string name="app_name">BMI計算機</string>
    <string name="tv_age">年齢</string>
    <string name="tv_weight">体重</string>
    <string name="tv_height">身長</string>
    <string name="tv_age_behi">歳</string>
    <string name="tv_weight_behi">kg</string>
    <string name="tv_height_behi">cm</string>
    <string name="bt_calc">計算</string>
    <string name="bt_clear">クリア</string>

</resources>